[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Projectile/Projectile.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[node name="Projectile" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 15
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="LifeTime" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 2 )

[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_DamageArea_body_exited"]
